[package]
name = "utracy-redact"
description = "Redact secret source locations from .utracy profiler files"
version = "1.0.0"
edition = "2024"
authors = ["ZeWaka <zewakagamer@gmail.com>"]
repository = "https://github.com/spacestation13/utracy-redact"
license = "GPL-3.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
